--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ng-icons/core": "^32.0.0",
+    "@ng-icons/devicon": "^32.0.0",
+    "@ng-icons/simple-icons": "^32.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
