fix: update base-href in deployment script for correct routing

--- a/.github/workflows/angular.build.deploy.yml
+++ b/.github/workflows/angular.build.deploy.yml
@@ -33,4 +33,4 @@ jobs:
             - name: deploy
               env:
                   GH_TOKEN: ${{ secrets.GH_TOKEN }}
-              run: npm run ng -- deploy --base-href=/angular-startpage/ --name="TheCICD" --email=the.baum12345@gmail.com
+              run: npm run ng -- deploy --base-href=/ --name="TheCICD" --email=the.baum12345@gmail.com
